# libLLKA

./: CITATION.txt  CMakeLists.txt  LICENSE.txt  README.md  mkcc.sh
assets/: LICENSE.txt  confals.csv  golden_steps.csv  nu_angles.csv  order_of_steps.txt
assets/test_cifs/: 1BNA_broken.cif  quote_in_quotes.cif  unterminated_quote.cif
cmake/: LLKAConfig.cmake.in
cmake/pkgconfig/: llka.pc.in
dnatco_extras/include/: dnatco.h
dnatco_extras/src/: dnatco.cpp
examples/: CMakeLists.txt  README.md
examples/classify_and_write_cif/: CMakeLists.txt  README.md  classify_and_write_cif.c  dnatco_step_name.c
examples/gui_assigner/: CMakeLists.txt  README.md
examples/gui_assigner/src/: assignment.cpp  assignment.h  assignment_parameters.h  main.cpp  worker.cpp  worker.h
examples/gui_assigner/src/ui/: assignment_in_progress_dlg.cpp  assignment_in_progress_dlg.h  assignment_in_progress_dlg.ui  assignment_parameters_dlg.cpp  assignment_parameters_dlg.h  assignment_parameters_dlg.ui  detailed_step_info.cpp  detailed_step_info.h  detailed_step_info.ui  detailed_step_info_dlg.cpp  detailed_step_info_dlg.h  detailed_step_info_dlg.ui  main_window.cpp  main_window.h  main_window.ui  setup_tracepoints_dlg.cpp  setup_tracepoints_dlg.h  setup_tracepoints_dlg.ui  view_last_trace_dlg.cpp  view_last_trace_dlg.h
examples/gui_assigner/src/ui/models/: ntc_assignment_table_model.cpp  ntc_assignment_table_model.h  ntc_colors.h
examples/mirror_cif/: CMakeLists.txt  mirror_cif.c
examples/similarity_connectivity/: CMakeLists.txt  clusters.csv  cmake_install.cmake  confal_percentiles.csv  example.sh  similarity_connectivity.cpp  test.sh
examples/simple_NtC_assignment/: CMakeLists.txt  dnatco_step_name.c  simple_NtC_assignment.c
include/: llka_classification.h  llka_config.h.in  llka_connectivity_similarity.h  llka_cpp.h  llka_main.h  llka_measurements.h  llka_minicif.h  llka_module.h  llka_ntc.h  llka_nucleotide.h  llka_platform_helpers.h  llka_resource_loaders.h  llka_segmentation.h  llka_structure.h  llka_superposition.h  llka_tracing.h  llka_util.h
python/: CMakeLists.txt  pyproject.toml  setup.py
python/examples/: analyze_trajectory.py  basic_classification.py  classify_and_write_cif.py  mdanalysis_simple.py  similarity_connectivity.py
python/pyllka/: __init__.py  classification.py  io.py  mdanalysis_integration.py  utils.py
python/src/: bindings.cpp
src/: classification.cpp  connectivity_similarity.cpp  extend.cpp  extend.h  extract.cpp  extract.h  extract.hpp  kabsch.hpp  llka.cpp  llka_cpp.cpp  measurements.cpp  minicif.cpp  non_standard_residues.h  ntc.cpp  ntc.hpp  ntc_bones.cpp  ntc_bones.hpp  ntc_constants.cpp  ntc_constants.h  ntc_references.h  nucleotide.cpp  nucleotide.hpp  residues.h  resource_loaders.cpp  segmentation.cpp  segmentation.h  similarity.h  standard_residues.h  structure.cpp  structure.hpp  structure_util.cpp  structure_util.hpp  superposition.cpp  superposition.hpp  tracing.cpp
src/minicif/: minicif_p.h  parser.cpp  parser.h  schema.hpp  writer.cpp  writer.h
src/minicif/categories/: atom-site.hpp  entry.hpp
src/tracing/: llka_tracer.h  llka_tracer_impl.h
src/tracing/internal/: tracer_user.h
src/util/: arch.hpp  csv.hpp  elementaries.cpp  elementaries.h  geometry.cpp  geometry.h  geometry_cpp.cpp  geometry_cpp.h  printers.cpp  printers.hpp  templates.hpp
tests/: CMakeLists.txt  effedup.cpp  effedup.hpp  test_basics.cpp  test_classification.cpp  test_connectivity.cpp  test_cpp_interface.cpp  test_cpp_interface_2.cpp  test_cpp_interface_3.cpp  test_extract_backbone.cpp  test_measurements.cpp  test_minicif.cpp  test_ntc.cpp  test_nucleotide.cpp  test_segmentation.cpp  test_similarity.cpp  test_structure_manipulation.cpp  test_structure_splitting.cpp  test_superposition.cpp  testing_structures.h
