if (NOT EMSCRIPTEN)
    add_subdirectory(simple_NtC_assignment)
    add_subdirectory(classify_and_write_cif)
    add_subdirectory(mirror_cif)
    add_subdirectory(gui_assigner)
    add_subdirectory(similarity_connectivity)
else ()
    if ((EMX_JS_BUILD_MODE STREQUAL "Node") OR (EMX_JS_BUILD_MODE STREQUAL "Node_SIMD"))
        add_subdirectory(simple_NtC_assignment)
        add_subdirectory(classify_and_write_cif)
        add_subdirectory(mirror_cif)
    else ()
        message(STATUS "When the platform target is WebAssembly, examples can be built only when we target Node.js as the runtime environment.")
    endif ()
endif ()
